@@ -15,11 +15,13 @@ man/mosquitto.8
 man/mosquitto-tls.7
 man/mosquitto.conf.5
 man/libmosquitto.3
+man/mosquitto_passwd.1
 man/mosquitto_pub.1
 man/mosquitto_sub.1
 man/mqtt.7
 src/db_dump/mosquitto_db_dump
 src/mosquitto
+src/mosquitto_passwd
 test/broker/broker.pid
 test/test_client
 test/fake_user
