@@ -2,14 +2,14 @@ include ../config.mk
 
 .PHONY : all clean install uninstall dist 
 
-all :  mosquitto.8 mosquitto-tls.7 mosquitto.conf.5 mosquitto_pub.1 mosquitto_sub.1 mqtt.7 libmosquitto.3
+all :  mosquitto.8 mosquitto-tls.7 mosquitto.conf.5 mosquitto_passwd.1 mosquitto_pub.1 mosquitto_sub.1 mqtt.7 libmosquitto.3
 
 clean :
 
 reallyclean : clean
 	-rm -f *.orig
 
-dist : mosquitto.8 mosquitto-tls.7 mosquitto.conf.5 mosquitto_pub.1 mosquitto_sub.1 mqtt.7 libmosquitto.3
+dist : mosquitto.8 mosquitto-tls.7 mosquitto.conf.5 mosquitto_passwd.1 mosquitto_pub.1 mosquitto_sub.1 mqtt.7 libmosquitto.3
 
 install :
 	$(INSTALL) -d ${DESTDIR}$(mandir)/man8
@@ -17,6 +17,7 @@ install :
 	$(INSTALL) -d ${DESTDIR}$(mandir)/man5
 	$(INSTALL) -m 644 mosquitto.conf.5 ${DESTDIR}${mandir}/man5/mosquitto.conf.5
 	$(INSTALL) -d ${DESTDIR}$(mandir)/man1
+	$(INSTALL) -m 644 mosquitto_passwd.1 ${DESTDIR}${mandir}/man1/mosquitto_passwd.1
 	$(INSTALL) -m 644 mosquitto_pub.1 ${DESTDIR}${mandir}/man1/mosquitto_pub.1
 	$(INSTALL) -m 644 mosquitto_sub.1 ${DESTDIR}${mandir}/man1/mosquitto_sub.1
 	$(INSTALL) -d ${DESTDIR}$(mandir)/man7
@@ -28,6 +29,7 @@ install :
 uninstall :
 	-rm -f ${DESTDIR}${mandir}/man8/mosquitto.8
 	-rm -f ${DESTDIR}${mandir}/man5/mosquitto.conf.5
+	-rm -f ${DESTDIR}${mandir}/man1/mosquitto_passwd.1
 	-rm -f ${DESTDIR}${mandir}/man1/mosquitto_pub.1
 	-rm -f ${DESTDIR}${mandir}/man1/mosquitto_sub.1
 	-rm -f ${DESTDIR}${mandir}/man7/mqtt.7
@@ -38,6 +40,9 @@ mosquitto.8 : mosquitto.8.xml
 	$(XSLTPROC) $^
 
 mosquitto.conf.5 : mosquitto.conf.5.xml
+	$(XSLTPROC) $^
+
+mosquitto_passwd.1 : mosquitto_passwd.1.xml
 	$(XSLTPROC) $^
 
 mosquitto_pub.1 : mosquitto_pub.1.xml
@@ -58,6 +63,7 @@ libmosquitto.3 : libmosquitto.3.xml
 potgen :
 	 xml2po -o po/mosquitto/mosquitto.8.pot mosquitto.8.xml
 	 xml2po -o po/mosquitto.conf/mosquitto.conf.5.pot mosquitto.conf.5.xml
+	 xml2po -o po/mosquitto_passwd/mosquitto_passwd.1.pot mosquitto_passwd.1.xml
 	 xml2po -o po/mosquitto_pub/mosquitto_pub.1.pot mosquitto_pub.1.xml
 	 xml2po -o po/mosquitto_sub/mosquitto_sub.1.pot mosquitto_sub.1.xml
 	 xml2po -o po/mqtt/mqtt.7.pot mqtt.7.xml
